--- a/PokemonTeam/PokemonTeam.csproj
+++ b/PokemonTeam/PokemonTeam.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>96836d90-ed3c-4830-b7c3-ac252c68c9d8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
