feature: implement JWT authentication and token service

--- a/PokemonTeam/appsettings.json
+++ b/PokemonTeam/appsettings.json
@@ -11,4 +11,7 @@
     "Audience": "PokemonTeamUser",
     "ExpiresInMinutes": 60
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=pokemon;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
