Fix : Modification of the key to fit the SHA256 bytes size required

--- a/PokemonTeam/appsettings.json
+++ b/PokemonTeam/appsettings.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "Issuer": "PokemonTeam",
     "Audience": "PokemonTeamUser",
-    "Key": "supersecretkey123456789",
+    "Key": "supersecretkey123456789_superstrongkey",
     "ExpiresInMinutes": 60
   },
   "ConnectionStrings": {
