--- a/PokemonTeam/appsettings.json
+++ b/PokemonTeam/appsettings.json
@@ -9,6 +9,7 @@
   "Jwt": {
     "Issuer": "PokemonTeam",
     "Audience": "PokemonTeamUser",
+    "Key": "UneSuperCleSecretePokemon123456!",
     "ExpiresInMinutes": 60
   }
 }
