--- a/PokemonTeam/appsettings.json
+++ b/PokemonTeam/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=PokemonDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;"
+  },
   "Jwt": {
     "Issuer": "PokemonTeam",
-    "Audience": "PokemonTeamUser",
-    "Key": "supersecretkey123456789",
+    "Audience": "PokemonTeamUser", 
+    "Key": "SuperSecretKeyForJWTTokenGeneration2025!",
     "ExpiresInMinutes": 60
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=PokemonDb;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False"
   }
 }
